        Science, https://doi.org/10.1177/0956797620904990).
        
    o   Added new vignette, "Analysis of Accuracy Data using ANOVA and binomial 
        GLMMs" which uses the new Stroop data.
        
    o   afex_plot introduction vignette and help page now refer to 
        ggbeeswarm::geom_quasirandom as a good alternative to the bee swarm 
        plot.

    Bugfixes

    o   objects estimated with mixed(..., all_fit = TRUE) should now work
        again with emmeans.
        
    o   afex_plot() works with mixed models estimated with mixed(..., type = 2) 
        (i.e., mixed models with Type II sums of squares).
        
    o   afex_plot() did not work if data had a column called 'y' that appeared
        before the response/DV column in data.
        
    o   Better error message if afex_plot() is called with variable/factor 'y' 
        for plotting (which is not supported, 'y' can only be the name of the 
        response variable).
        
    o   Better error message if afex_plot() fails to recover the dv from the 
        formula (e.g., for brms models).
    
    o   Better error messages in case of NAs in the response variable for 
        ANOVAs and mixed models.
        
    o   afex_plot.merMod() method does not fail any more for models with missing
        data. 


                    *************************
                    ** afex VERSION 0.27-x **
                    *************************
                    
                    Changes in afex Version 0.27-x
                    Released March 2020
                    
    Significant User Visible Changes and New Features
    
    o   p-values are now per default rounded to 3 digits following APA 
        recommendations, thanks to Marius Barth: 
        https://github.com/singmann/afex/issues/81
        To achieve this, a new argument, round_ps, was added to nice() which 
        accepts a rounding function and defaults to round_ps_apa() via 